--- a/Client/css/index.css
+++ b/Client/css/index.css
@@ -2,6 +2,7 @@ html
 {
 	height: 100%;
 	box-sizing: border-box;
+	background-color: #131516;
 }
 
 
@@ -13,12 +14,14 @@ html
 
 body
 {
-	margin: 0;
+	margin: 0 auto;
+	max-width: 1500px;
 	padding: 0;
-	background-color: #ffffff;
 	position: relative;
 	min-height: 100%;
 	font-family: "Arial", sans-serif;
+	font-size: 12pt;
+	color: #ffffff;
 }
 
 
@@ -26,20 +29,72 @@ header
 {
 	font-family: "Arial", sans-serif;
 	font-weight: lighter;
+	margin: 0 30px;
 	padding: 10px 0;
-	margin: 0 15vw;
 	text-align: center;
 
+	/* Gradient, rainbow border on bottom of header. */
 	border-bottom: 5px solid transparent;
-	border-image: linear-gradient(to right,#fa0d13, #f5710c, #f5c609,
-		#23be04, #0096fa,#c00083);
+	border-image: linear-gradient(to right, #fa0d13, #f5710c, #f5c609,
+		#23be04, #0096fa, #9300c0);
 	border-image-slice: 1;
 }
 
-header h1
+header a
 {
-	font-weight: lighter;
+	text-decoration: none;
 }
+
+/* Company name. */
+header ul
+{
+	margin: 0;
+	font-family: "Bebas Neue", sans-serif;
+	font-weight: lighter;
+	font-size: 40pt;
+	list-style-type: none;
+	overflow: hidden;
+}
+
+/* Letters in company name. */
+header ul li
+{
+	float: left;
+}
+
+
+/* Makes letters in company name rainbow coloured.
+ * Rainbow pattern repeats every 6 letters. */
+header ul li:nth-child(6n + 1)
+{
+	color: #fa0d13;
+}
+
+header ul li:nth-child(6n + 2)
+{
+	color: #f5710c;
+}
+
+header ul li:nth-child(6n + 3)
+{
+	color: #f5c609;
+}
+
+header ul li:nth-child(6n + 4)
+{
+	color: #23be04;
+}
+
+header ul li:nth-child(6n + 5)
+{
+	color: #0096fa;
+}
+
+header ul li:nth-child(6n + 6)
+{
+	color: #9300c0;
+}
+
 
 header img
 {
@@ -59,7 +114,6 @@ nav
 nav a
 {
 	padding: 0 10px;
-	text-decoration: none;
 	color: grey;
 
 	float: left;
@@ -75,7 +129,7 @@ nav a:hover
 
 nav a.active
 {
-	color: black;
+	color: #ffffff;
 }
 
 nav .searchBar
@@ -85,43 +139,22 @@ nav .searchBar
 
 nav .searchBar button
 {
-	/*float: right;*/
 	cursor: pointer;
 }
 
-@media screen and (max-width: 800px)
-{
-	nav .searchBar
-	{
-		float: none;
-		padding-left: 50px;
-		padding-right: 50px;
-	}
 
-	nav a
-	{
-		float: none;
-		display: block;
-		width: 100%;
-	}
-}
 
 
 main
 {
-	display: flow-root;
-	margin: 0 15vw;
 	word-wrap: break-word;
 	font-size: 12pt;
 	text-align: justify;
 	text-justify: inter-word;
 	min-height: 100%;
 	position: relative;
+	margin: 0 30px;
 	padding-bottom: 150px;
-	padding-left: 30px;
-	padding-right: 30px;
-
-	max-width: 70vw;
 }
 
 main h1
@@ -141,21 +174,110 @@ main h2
 footer
 {
 	position: absolute;
+	margin: 0 30px;
 	padding: 25px 0;
-	margin: 0 15vw;
 	left: 0;
 	right: 0;
 	bottom: 0;
 
+	/* Gradient, rainbow border on top of footer. */
 	border-top: 5px solid transparent;
-	border-image: linear-gradient(to right,#fa0d13, #f5710c, #f5c609,
-		#23be04, #0096fa,#c00083);
+	border-image: linear-gradient(to right, #fa0d13, #f5710c, #f5c609,
+		#23be04, #0096fa, #9300c0);
 	border-image-slice: 1;
 }
 
 
-table img.resize
+.productGrid
 {
-	width: 50px;
+	margin-top: 15px;
+	display: grid;
+	grid-gap: 0px;
+	grid-template-columns: repeat(5, 20%);
+	background-color: #ffffff;
+	border-radius: 20px;
+}
+
+.productGridItem
+{
+	margin: 0.5vw;
+	padding: 15px;
+	border-radius: 15px;
+	background-color: #ffffff;
+	box-shadow: 3px 3px 8px grey;
+	text-align: left;
+}
+
+.productName
+{
+	font-weight: bold;
+	color: black;
+}
+
+.productType
+{
+	margin: 5px 0;
+	font-size: 15pt;
+	color: grey;
+	font-family: "Bebas Neue", sans-serif;
+}
+
+.productPrice
+{
+	font-family: "Bebas Neue", sans-serif;
+	font-size: 20pt;
+	color: #000000;
+}
+
+.productGridItem img
+{
+	width: 100%;
 	height: auto;
+}
+
+
+/* Displays 4 products per line at 1500px window width. */
+@media only screen and (max-width: 1500px)
+{
+	.productGrid
+	{
+		grid-template-columns: repeat(4, 25%);
+	}
+}
+
+/* Displays 3 products per line at 1000px window width. */
+@media only screen and (max-width: 1000px)
+{
+	.productGrid
+	{
+		grid-template-columns: repeat(3, 33.33%);
+		grid-template-columns: repeat(3, calc(100% / 3));
+	}
+}
+
+/* Collapses navigation and search bar at 850px window width. */
+@media only screen and (max-width: 850px)
+{
+	nav .searchBar
+	{
+		float: none;
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+
+	nav a
+	{
+		float: none;
+		display: block;
+		width: 100%;
+	}
+}
+
+/* Displays 2 products per line at 700px window width. */
+@media only screen and (max-width: 700px)
+{
+	.productGrid
+	{
+		grid-template-columns: repeat(2, 50%);
+	}
 }
