Beginnings of login functionality
The login form will self submit user input and check that input against the database. If a result is found, the user information is stored to a session. Currently there is nothing stopping multiple users from logging in, and the login page does not advance to another webpage. Additional pages could be similar that re designed to deal with a logged in user

--- a/Client/css/index.css
+++ b/Client/css/index.css
@@ -311,6 +311,7 @@ footer
 
 .loginForm input
 {
+	text-align: left;
 	display: flex;
 	font-size: 28px;
 	width: 300px;
@@ -319,8 +320,25 @@ footer
 .loginLabel
 {
 	display: flex;
-	text-align: right;
+	text-align: center;
 	margin-bottom: 10px;
 	width: 300px;
+}
+
+#loginButton
+{
+	display: block;
+	text-align: center;
+	margin: auto;
+}
+
+#missingLogin
+{
+	text-align: center;
+}
+
+#loginSuccess
+{
+	text-align: center;
 }
 /* Login page CSS End */
