Login, Logout done, Sign-up almost done
The login and logout functionality of the website is now in place, the signing up of users is done HTML wise but not JS or PHP wise, functionality still needs to be added

--- a/Client/css/index.css
+++ b/Client/css/index.css
@@ -261,6 +261,31 @@ footer
 	width: 300px;
 }
 
+/* Sign-up page CSS */
+.signupFormContainer
+{
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+}
+
+.signupForm
+{
+	font-size: 36px;
+}
+
+.signupForm input
+{
+	display: flex;
+	font-size: 28px;
+	text-align: center;
+	justify-content: center;
+}
+
+.signupForm button
+{
+	font-size: 20px;
+}
 
 
 
